lang/macro/tests/ui/fail/01-constructor-returns.stderr
error: constructor of liquid contract should not have return value
  --> $DIR/01-constructor-returns.rs:10:39
   |
10 |         pub fn constructor(&mut self) -> Self {}
   |                                       ^^^^^^^
